Fixing header on mobile

--- a/source/assets/css/partials/sections/_footer.scss
+++ b/source/assets/css/partials/sections/_footer.scss
@@ -1,25 +1,18 @@
 .main-footer{
-    max-width: 500px;
-    margin: 0px auto 30px auto;
+    padding: 30px;
+    @extend .cf;
     p{
-        text-align: center;
-        padding: 0px 0px 20px 0px;
-        color: $c_text;
-        font-weight: 600;
+        float: left;
+        color: $color_talk-alt;
+        font-size: 14px;
     }
     nav{
-        text-align: center;
+        float: left;
+        font-size: 14px;
+        margin: 0 0 0 20px;
         a{
-            text-align: center;
             display: inline-block;
-            margin: 0px 5px 0px 5px;
-            font-weight: 600;
-            color: $c_brand;
-            @include easing(350ms);
-            &:hover{
-                @include easing(350ms);
-                color: $c_text;
-            }
+            margin: 0 0 0 10px;
         }
     }
 }
