--- a/source/assets/css/partials/tools/_color.scss
+++ b/source/assets/css/partials/tools/_color.scss
@@ -24,7 +24,3 @@ $c_code-nue: #E40C73;
 $c_text: #4C5163;
 $c_text-light: #888;
 $color_white: #ffffff;
-
-body{
-    background-color: $color_light-alt;
-}
