--- a/source/assets/css/partials/tools/_devices.scss
+++ b/source/assets/css/partials/tools/_devices.scss
@@ -1,54 +1,4 @@
-@media handheld, only screen and (max-width: 900px){
-    .main-header{
-        nav{
-            display: none;
-            position: absolute;
-            top: 68px;
-            padding: 10px;
-            width: 100%;
-            left: 0px;
-            right: 0px;
-            background-color: rgba(0,0,0,0.85);
-            a{
-                display: block;
-                padding: 10px;
-                margin: 0px;
-            }
-        }
-        a#menu{
-            display: block;
-        }
-    }
-    .main-posts{
-        .author{
-            .prof{
-                img{
-                    float: none;
-                    padding: 0px;
-                    margin: 0px 0px 10px 0px;
-                }
-                .author-name,
-                .date{
-                    float: none;
-                    padding: 0px;
-                    margin: 0px;
-                    padding: 10px 10px 0px 10px;
-                    background-color: #f4f4f4;
-                    display: block;;
-                }
-                .guest-author{
-                    float: none;
-                    padding: 0px;
-                    margin: 0px;
-                    background-color: #f4f4f4;
-                    display: block;
-                    padding: 10px 10px 10px 10px;
-                }
-            }
-        }
-    }
-}
-@media handheld, only screen and (max-width: 650px){
+@media all and (max-width: 780px){
     .grid{
         width: 100%;
         min-width: 0;
@@ -67,10 +17,27 @@
         padding-left: 20px;
         padding-right: 20px;
     }
-}
-
-@media handheld, only screen and (max-width: 480px){
-    .logo{
-        span.eng-blog{display: none;}
+    .main-header{
+        nav{
+            display: none;
+            position: absolute;
+            top: 75px;
+            padding: 0 20px;
+            width: 100%;
+            left: 0px;
+            right: 0px;
+            z-index: 999;
+            background-color: $color_deep-alt;
+            a{
+                display: block;
+                padding: 20px 0;
+                margin: 0px;
+                color: $color_white;
+                border-bottom: 1px solid $color_deep;
+                &:last-of-type{border:0;}
+            }
+        }
+        // Show the menu button
+        #menu{display: block;}
     }
 }
